# gmx-ccxt-middleware

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.codex/: config.toml
.github/workflows/: acceptance-smoke.yml  docker.yml  integration.yml
config/: gmx-bridge.example.toml
docs/: api.md  architecture.md  config.md  development.md  example.js  tests.md
docs/images/: architecture-engine-detail.mmd  architecture-external-integrations.mmd  architecture-middleware-server-detail.mmd  architecture-open-position-sequence.mmd  architecture.mmd
scripts/: release.sh
src/gmx_ccxt_server/: __init__.py  __main__.py  app.py  config.py  logging_utils.py  runtime.py  serialization.py
src/gmx_ccxt_server/routes/: __init__.py  auth.py  balance.py  call.py  describe.py  models.py  ping.py
tests/acceptance/: smoke-test.sh
tests/js/: bridge-contract.test.mjs  gmx-account.live.test.mjs  gmx-errors.test.mjs  gmx-lagoon.fork.test.mjs  gmx-lagoon.testnet.test.mjs  gmx-margin.testnet.test.mjs  gmx-market-data.live.test.mjs  gmx-smoke.test.mjs  gmx-trading.fork.test.mjs  gmx-trading.testnet.test.mjs
tests/js/helpers/: bridge-test-helpers.mjs
tests/python/: test_runtime.py
