[tool.poetry]
name = "gmx-ccxt-server"
version = "0.1.0"
description = "FastAPI bridge for the GMX CCXT Python adapter and remote CCXT exchange stubs"
authors = ["OpenAI Codex <codex@openai.com>"]
readme = "README.md"
packages = [
  { include = "gmx_ccxt_server", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = "^0.115.12"
pydantic = "^2.11.1"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
web3-ethereum-defi = { path = "./web3-ethereum-defi", develop = true, extras = ["ccxt"] }

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.5"
ruff = "^0.11.13"

[tool.poetry.scripts]
gmx-ccxt-server = "gmx_ccxt_server.__main__:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
# We hate arbitrary line lengths
extend-exclude = ["*.ipynb"]
indent-width = 4
line-length = 999

[tool.ruff.lint]
# Enable preview features & checks (use with caution)
extend-select = [
  # features in preview
  "W292", # missing-newline-at-end-of-file
]
preview = true
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C", # mccabe
  "COM", # flake8-commas (enforces trailing commas)
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "EM", # flake8-errmsg
  "F", # Pyflakes
  "FBT", # flake8-boolean-trap
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "I", # isort
  "N", # pep8-naming
  "PLC", # Pylint Convention
  "PLE", # Pylint Error
  "PLR", # Pylint Refactor
  "PLW", # Pylint Warning
  "Q", # flake8-quotes
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "T", # flake8-debugger
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W", # pycodestyle warnings
  "YTT", # flake8-2020
  "RUF100", # Automatically remove unused # noqa directives,
]

ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027", # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003", # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107", # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLC1901", # empty string comparisons
  "PLW2901", # `for` loop variable overwritten
  "SIM114", # Combine `if` branches using logical `or` operator
  "E203", # Whitespace before :, needed for black compatibility and also `ruff format`
  "ISC001", # causes unexpected behaviour with formatter,
  "COM812", # Trailing comma missing - conflicts with formatter
  "S101", # Use of asserts
  "EM102", # Exception must not use f-string literal
]

[tool.ruff.lint.per-file-ignores]
# CLI scripts legitimately use print() for console output
"scripts/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["gmx_ccxt_server"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
# Force function parameters to cascade when they don't fit on one line
# This makes ruff more aggressive about splitting long function calls/definitions
docstring-code-format = true # Format code blocks in docstrings
indent-style = "space"
skip-magic-trailing-comma = false # Respect trailing commas to force multi-line

# This disables the specific normalization rule
# skip-string-normalization = true   # Available since Ruff 0.5+
# NOTE: Still under development. Ref: https://github.com/astral-sh/ruff/issues/6606
#[tool.ruff.lint.pydocstyle]
## Use Sphinx docstring convention
#convention = "sphinx"
